sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '(' expected but identifier found.
    if plusPetit(i+1,i)==True {
       ^AlgBubbleSort1:9: error: illegal start of simple expression
  }
  ^