sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i : Int = 0
  var a : Int = getNombreValeurs()
  for (i<- 0 to a){
    if plusPetit(i+1,i)==True {
      echange(i+1,i)
    }
  }
}